Bottom Navigation menu items name's changed

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_maps">
 
     <fragment
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_maps"
         android:name="com.apiman.go4lunch.ui.home.HomeFragment"
-        android:label="@string/title_home"
+        android:label="@string/title_maps"
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_list_view"
         android:name="com.apiman.go4lunch.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
+        android:label="@string/title_list_view"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_workmates"
         android:name="com.apiman.go4lunch.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
+        android:label="@string/title_workmates"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
