--- a/app/src/main/res/layout/content_restaurant_details.xml
+++ b/app/src/main/res/layout/content_restaurant_details.xml
@@ -34,7 +34,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView"
+                        android:id="@+id/nameTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Le Zinc"
