--- a/app/src/main/res/layout/restaurant_list_item_view.xml
+++ b/app/src/main/res/layout/restaurant_list_item_view.xml
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginEnd="8dp"
-        android:text="(2)"
+        android:text="(0)"
         android:gravity="bottom"
         android:drawableStart="@drawable/ic_person_outline_black_24dp"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
@@ -79,12 +79,12 @@
         android:text="Le Zinc"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@android:color/black"
-        app:layout_constraintEnd_toStartOf="@+id/textView2"
+        app:layout_constraintEnd_toStartOf="@+id/distanceTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/distanceTextView"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
