--- a/app/src/main/res/layout/activity_restaurant_details.xml
+++ b/app/src/main/res/layout/activity_restaurant_details.xml
@@ -44,7 +44,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/markAsSelected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
