--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_maps"
-        android:name="com.apiman.go4lunch.ui.maps.MapsFragment"
+        android:name="com.apiman.go4lunch.fragments.MapsFragment"
         android:label="@string/title_maps"
         tools:layout="@layout/fragment_maps" />
 
     <fragment
         android:id="@+id/navigation_list_view"
-        android:name="com.apiman.go4lunch.ui.listview.ListViewFragment"
+        android:name="com.apiman.go4lunch.fragments.ListViewFragment"
         android:label="@string/title_list_view"
         tools:layout="@layout/fragment_list_view" />
 
     <fragment
         android:id="@+id/navigation_workmates"
-        android:name="com.apiman.go4lunch.ui.workmates.WorkmatesFragment"
+        android:name="com.apiman.go4lunch.fragments.WorkmatesFragment"
         android:label="@string/title_workmates_available"
         tools:layout="@layout/fragment_workmates" />
 </navigation>
