--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#FFAB00</color>
     <color name="colorGrey100">#F5F5F5</color>
     <color name="colorGrey300">#E0E0E0</color>
+    <color name="colorGrey600">#757575</color>
     <color name="nav_background_color">#FF8A65</color>
     <color name="dark_transparent_background_color">#80000000</color>
+    <color name="colorRed700">#D32F2F</color>
 </resources>
