- Show joining workmates on restaurant

--- a/app/src/main/res/layout/workmate_list_item_view.xml
+++ b/app/src/main/res/layout/workmate_list_item_view.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
