--- a/app/src/main/res/layout/activity_restaurant_details.xml
+++ b/app/src/main/res/layout/activity_restaurant_details.xml
@@ -26,6 +26,7 @@
             app:toolbarId="@+id/toolbar">
 
             <ImageView
+                android:id="@+id/coverPhoto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/plat"
