--- a/app/src/main/res/layout/content_restaurant_details.xml
+++ b/app/src/main/res/layout/content_restaurant_details.xml
@@ -49,7 +49,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginStart="16dp"
                         android:numStars="3"
-                        android:rating="2" />
+                        android:rating="1.5" />
                 </LinearLayout>
 
                 <TextView
@@ -79,7 +79,8 @@
                 android:paddingBottom="16dp"
                 android:textColor="@color/colorPrimary"
                 android:background="@android:color/transparent"
-                android:text="Call" />
+                android:text="Call"
+                android:visibility="gone"/>
 
             <Button
                 android:id="@+id/likeBtn"
@@ -107,7 +108,8 @@
                 android:paddingBottom="16dp"
                 android:textColor="@color/colorPrimary"
                 android:background="@android:color/transparent"
-                android:text="Website" />
+                android:text="Website"
+                android:visibility="gone"/>
         </LinearLayout>
 
         <View
