--- a/app/src/main/res/layout/workmate_list_item_view.xml
+++ b/app/src/main/res/layout/workmate_list_item_view.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:foreground="?android:selectableItemBackground"
     android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:ignore="UnusedAttribute">
 
     <TextView
         android:id="@+id/textView"
@@ -13,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:text="Falone is eating ivorian (Le Zinc)"
+        android:text="@string/sample_falone_is_eating_ivorian_le_zinc"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="@+id/profile_image"
